<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    >
    
    <LinearLayout
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/my_account"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.113"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!-- Profile section -->
    <LinearLayout
        android:id="@+id/profile_section"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="20dp"
        android:background="@drawable/user_info_background"
        android:gravity="center_vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/top_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Profile icon -->
        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/user_pic"
            android:contentDescription="@string/profile_icon" />

        <!-- Name and email -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"
                android:textColor="#9B9FA8"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Buttons section -->
    <LinearLayout
        android:id="@+id/buttons_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_section">



        <!-- Help and resources button -->
        <LinearLayout
            android:id="@+id/help_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/option_background">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/help_icon"
                android:contentDescription="@string/help_icon"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/help_button"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/chevron_icon"
                android:src="@drawable/chevron_right" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/term_and_conditions_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:background="@drawable/option_background">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/term_icon"
                android:contentDescription="@string/term_icon"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/conditions_button"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/chevron_right"
                android:contentDescription="@string/chevron_icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:background="@drawable/option_background">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/logout_icon"
                android:contentDescription="@string/logout_icon"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/logout_button"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/chevron_right"
                android:contentDescription="@string/chevron_icon" />

        </LinearLayout>
    </LinearLayout>


<!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent">-->

<!--        <com.google.android.material.bottomappbar.BottomAppBar-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="80dp"-->
<!--            android:layout_gravity="bottom"-->
<!--            android:backgroundTint="@color/bar"-->
<!--            app:fabAlignmentMode="center"-->
<!--            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior">-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="horizontal">-->
<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:orientation="vertical"-->
<!--                    >-->

<!--                    <ImageView-->
<!--                        android:id="@+id/homeicon"-->
<!--                        android:layout_width="54dp"-->
<!--                        android:layout_height="40dp"-->
<!--                        android:layout_margin="4dp"-->
<!--                        android:layout_weight="15"-->
<!--                        android:src="@drawable/home"-->
<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintHorizontal_bias="0.048"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toTopOf="parent"-->
<!--                        app:layout_constraintVertical_bias="0.68" />-->

<!--                    <ImageView-->
<!--                        android:id="@+id/chart"-->
<!--                        android:layout_width="54dp"-->
<!--                        android:layout_height="40dp"-->
<!--                        android:layout_margin="4dp"-->
<!--                        android:layout_weight="15"-->
<!--                        android:src="@drawable/chart"-->
<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintHorizontal_bias="0.333"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toTopOf="parent"-->
<!--                        app:layout_constraintVertical_bias="0.68" />-->

<!--                    <ImageView-->
<!--                        android:id="@+id/pay"-->
<!--                        android:layout_width="54dp"-->
<!--                        android:layout_height="40dp"-->
<!--                        android:layout_margin="4dp"-->
<!--                        android:layout_weight="15"-->
<!--                        android:src="@drawable/pay"-->
<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintHorizontal_bias="0.633"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toTopOf="parent"-->
<!--                        app:layout_constraintVertical_bias="0.68" />-->

<!--                    <ImageView-->
<!--                        android:id="@+id/profile"-->
<!--                        android:layout_width="54dp"-->
<!--                        android:layout_height="40dp"-->
<!--                        android:layout_margin="4dp"-->
<!--                        android:layout_weight="15"-->
<!--                        android:src="@drawable/profilehighlight"-->
<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintHorizontal_bias="0.951"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toTopOf="parent"-->
<!--                        app:layout_constraintVertical_bias="0.68" />-->

<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--            </LinearLayout>-->

<!--        </com.google.android.material.bottomappbar.BottomAppBar>-->
<!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>
